intel/bench_214/extr_.labenginecoderenderergl1tr_model_iqm.c_Matrix34Multiply_with_main/log.txt
bench_214/extr_.labenginecoderenderergl1tr_model_iqm.c_Matrix34Multiply_with_main/extr_.labenginecoderenderergl1tr_model_iqm.c_Matrix34Multiply_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
